# HandPosDetection

./: init_cv.sh
Intro/: .canny_pyr.cpp.swp  canny  (+21 more)
hand_pose_detection/: CMakeLists.txt
hand_pose_detection/Report/: bib.ref  ref.bib  report.aux  report.bbl  report.blg  report.out  report.tex  report.toc
hand_pose_detection/dataset/dataset_set/BochumGestures1998/: README
hand_pose_detection/dataset/dataset_set/BochumGestures1998/rgb/: carstenk01b00R.tiff  carstenk01c00R.tiff  carstenk02a00R.tiff  carstenk02b00R.tiff  carstenk02c00R.tiff  carstenk03b00R.tiff  carstenk03c00R.tiff  carstenk04a00R.tiff  carstenk04b00R.tiff  carstenk04c00R.tiff  carstenk05a00R.tiff  carstenk05b00R.tiff  carstenk05c00R.tiff  carstenk06a00R.tiff  carstenk06b00R.tiff  carstenk06c00R.tiff  carstenk07a00R.tiff  carstenk07b00R.tiff  carstenk07c00R.tiff  carstenk08a00R.tiff  carstenk08b00R.tiff  carstenk08c00R.tiff  carstenk09a00R.tiff  carstenk09b00R.tiff  carstenk09c00R.tiff  carstenk10a00R.tiff  carstenk10b00R.tiff  carstenk10c00R.tiff  carstenk11a00R.tiff  carstenk11c00R.tiff  carstenk12a00R.tiff  carstenk12b00R.tiff  carstenk12c00R.tiff  norbertk01a00R.tiff  norbertk01b00R.tiff  norbertk01c00R.tiff  norbertk02a00R.tiff  norbertk02b00R.tiff  norbertk02c00R.tiff  norbertk03a00R.tiff  (+65 more)
hand_pose_detection/dataset/dataset_set/dhg_marcel/: plot2D.ps
hand_pose_detection/dataset/peipa/Peipa/: hand-01.pgm  hand-02.pgm  hand-03.pgm  hand-04.pgm  hand-05.pgm  hand-06.pgm  hand-07.pgm  hand-08.pgm  hand-09.pgm  hand-10.pgm  hand-11.pgm  hand-12.pgm  hand-13.pgm  hand-14.pgm  hand-15.pgm  hand-16.pgm  hand-17.pgm  hand-18.pgm  hand-19.pgm  hand-20.pgm  hand-21.pgm  hand-22.pgm  hand-23.pgm  hand-24.pgm  hand-25.pgm  hand-26.pgm  hand-27.pgm  hand-28.pgm  hand-29.pgm  hand-30.pgm  hand-31.pgm  hand-32.pgm  hand-33.pgm  hand-34.pgm  hand-35.pgm  hand-36.pgm  hand-37.pgm  hand-38.pgm  hand-39.pgm  hand-40.pgm  (+10 more)
hand_pose_detection/src/gabor_filters/: CMakeLists.txt  compile.sh  extract_gabor_filters  extract_gabor_filters.cpp  extract_gabor_filters1.cpp  extract_gabor_filters1.h  main.cpp  trained_svm
hand_pose_detection/src/gabor_filters/EF/: CMakeLists.txt  extract_features.cpp  extract_features.h
hand_pose_detection/src/gabor_filters/EGF/: CMakeLists.txt  extract_gabor_filters.cpp  extract_gabor_filters.h
hand_pose_detection/src/gabor_filters/sift_models/: CMakeLists.txt  clean.sh  compile.sh  create_models.cpp  run.sh
hand_pose_detection/src/hough_transform/: make_template  make_template.cpp
(+1042 files in other folders)
